Update footer & ignore

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; 记时光. 2020: <a >记录生活</a>.  <a target="beian" href="http://www.beian.miit.gov.cn">陕ICP备20001717号-1</a></span>
+						<span class="copyright">&copy; 记时光. 2020: <a >记录生活</a>.</span>
 					</footer>
 
 			</div>
