Add meta to help SEO

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	<head>
 		<title>记时光-首页</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="记时光是一个非常小巧的日记 APP ，我们希望能够帮助你们重拾记日记的习惯，记录美好的每一天。" />
+		<meta name="keywords" content="日记,时光,APP,安卓,iOS,Windows,酷安,小巧,美好" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/x-icon" href="assets/css//images/ic_launcher-web.png">
+		<link rel="icon" type="image/x-icon" href="assets/css//images/ic_launcher-web.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -25,8 +27,7 @@
 						<p> 小 巧 实 用 &nbsp;&bull;&nbsp; MD 风 格 &nbsp;&bull;&nbsp; 日 记</p>
 						<nav>
 							<ul>
-								<li><a target="blank" href="https://www.coolapk.com/apk/com.ifreedomer.timenote
-" class="icon brands fa-android"><span class="label">点击下载</span></a></li>
+								<li><a target="blank" href="https://www.coolapk.com/apk/com.ifreedomer.timenote" class="icon brands fa-android"><span class="label">点击下载</span></a></li>
 								<li><a href="#" class="icon brands fa-apple"><span class="label">暂未开放</span></a></li>
 								<li><a href="#" class="icon brands fa-windows"><span class="label">暂未开放</span></a></li>
 								<li><a href="#" class="icon brands fa-adn"><span class="label">暂未开放</span></a></li>
